# moedict-data-terms

./: .gitignore  LICENSE  LICENSE-DATA.md  README.md  pyproject.toml  run.sh
academic-terms/: .gitignore  LICENSE.md  download.py  html_to_csv.py  load_categories.py
academic-terms/samples/: 14842.csv  Term_202_0.html  Term_331_0.html  Term_520_0.html  datagovtw_dataset_20201101.csv
public-terms/: Makefile  README.md  download.html  download.sh  parser.py
raw_data/: categories.csv
samples/: 15272.xml
scripts/: download_terms.py  get_term_categories.py  html_to_csv.py
src/: download.py  load_categories.py  models.py
