[tool.poetry]
name = "naer-terms"
version = "0.1.0"
description = "NAER terms open data parser"
authors = ["Poren Chiang <poren@poren.tw>"]
license = "MIT"
readme = "README.md"
packages = [{include = "naer_terms"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
odfpy = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
